--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/DlmMeY4cHk8YYBj9/QgK",
+      "authorship_tag": "ABX9TyPGWc+qfNQr04rTbNFfic0b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wmoU7Jy-kZ2F",
-        "outputId": "d45f0fff-0266-4dcc-dc5d-f6dc99adf6b4"
+        "outputId": "7e156bb6-c946-4c46-cdd0-609e10a3a84b"
       },
       "source": [
         "# Import \"chatbot\" from \n",
@@ -188,22 +188,78 @@
         "# Now let us train our bot with multipple corpus\n",
         "trainer.train(\"chatterbot.corpus.english.greetings\",\n",
         "              \"chatterbot.corpus.english.conversations\" )\n",
-        "query = input('Ask :')\n",
-        "response = chatbot.get_response((query))\n",
-        "print(response)\n",
+        "cont = 'true'\n",
+        "while(cont):\n",
+        "  if(cont == 'exit'):\n",
+        "    break;\n",
+        "  query = input('Ask :')\n",
+        "  response = chatbot.get_response((query))\n",
+        "  print(response)\n",
         "  \n",
-        "# response = chatbot.get_response('who is this')\n",
+        "# response = chatbot.get_response('hello')\n",
         "# print(response)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training greetings.yml: [####################] 100%\n",
             "Training conversations.yml: [####################] 100%\n",
+            "Ask :hi, how are you\n",
+            "Sort of.\n",
+            "Ask :welcome\n",
+            "I use Python, Java and C++ quite often.\n",
+            "Ask :are you a python expert\n",
+            "Tell me a joke\n",
+            "Ask :hi, how is it going\n",
+            "Good\n",
+            "Ask :great to know\n",
+            "No problem\n",
+            "Ask :how are you ?\n",
+            "I am on the Internet.\n",
+            "Ask :how are you doing?\n",
+            "I am doing well.\n",
+            "Ask :great\n",
+            "Unless explicitly silenced.\n",
+            "Ask :great!\n",
+            "A lot of things, like all the other digits other than 0 and 1.\n",
+            "Ask :hi,how are you doing\n",
+            "Sort of.\n",
+            "Ask :how are you doing\n",
+            "I am doing well.\n",
+            "Ask :what can  do for you?\n",
+            "Software copying is a form of digital cloning.\n",
+            "Ask :hello\n",
+            "Hi\n",
             "Ask :hi\n",
-            "How are you doing?\n"
+            "How are you doing?\n",
+            "Ask :welcome\n",
+            "I can be programmed to act as if I do.\n",
+            "Ask :Hi, How is it going?\n",
+            "Good\n",
+            "Ask :Hi, How is it going?\n",
+            "Good\n",
+            "Ask :Good morning, how are you?\n",
+            "I am doing well, how about you?\n",
+            "Ask :I am doing well, how about you?\n",
+            "I'm also good.\n",
+            "Ask :That's good to hear.\n",
+            "Yes it is.\n",
+            "Ask :Can I help you with anything?\n",
+            "Yes, I have a question.\n",
+            "Ask :What is your question?\n",
+            "Could I borrow a cup of sugar?\n",
+            "Ask :I'm sorry, but I don't have any.\n",
+            "Thank you anyway\n",
+            "Ask :No problem\n",
+            "A lot of things, like all the other digits other than 0 and 1.\n",
+            "Ask :How are you doing?\n",
+            "I am doing well.\n",
+            "Ask :Have you heard the news?\n",
+            "What good news?\n",
+            "Ask :What is your favorite book?\n",
+            "I can't read.\n"
           ],
           "name": "stdout"
         }
